clean up week 4 notebooks

--- a/examples/BMI2002_SP_21/week_4_examples/BMSE_Advanced_Python.ipynb
+++ b/examples/BMI2002_SP_21/week_4_examples/BMSE_Advanced_Python.ipynb
@@ -51,16 +51,16 @@
       "metadata": {
         "id": "Fab2HseCsFd2",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e1ebac9b-e6b3-464b-c5bc-b61d0ea7e41e"
+        "outputId": "2e890274-0487-4661-c076-589957d93ac1"
       },
       "source": [
         "pairs = [(1, 'one'), (2, 'two'), (3, 'three'), (4, 'four')]\n",
-        "sorted(pairs, key=lambda pair: pair[1])\n"
+        "# sort by the names of the numbers\n",
+        "sorted(pairs, key=lambda pair: pair[1])"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -72,7 +72,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 1
         }
       ]
     },
@@ -136,24 +136,23 @@
       "metadata": {
         "id": "sctGZDC_0l4m",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 87
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8051ca18-3e22-469a-a5b7-dc7974e02e74"
+        "outputId": "0a6dad4b-90d3-4ea5-f0da-ab4640c1272c"
       },
       "source": [
         "from dataclasses import dataclass\n",
         "\n",
         "@dataclass\n",
         "class Pair:\n",
-        "    ''' Class for example pair '''\n",
+        "    \"\"\"Class for example pair\"\"\"\n",
         "    numeral: int\n",
         "    name: str\n",
         "\n",
         "pairs = [Pair(1, 'one'), Pair(2, 'two'), Pair(3, 'three'), Pair(4, 'four')]\n",
         "sorted(pairs, key=lambda pair: pair.name)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -168,7 +167,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 2
         }
       ]
     },
@@ -179,7 +178,7 @@
       },
       "source": [
         "`lambda`'s helpful with `filter()`, `map()`, etc.\n",
-        "See Python [functions](https://docs.python.org/3/library/functions.html). See [filter](https://docs.python.org/3/library/functions.html#filter). Filter's signature:\n",
+        "See Python [functions](https://docs.python.org/3/library/functions.html) and [filter](https://docs.python.org/3/library/functions.html#filter). Filter's signature:\n",
         "\n",
         "    filter(function, iterable)"
       ]
@@ -189,15 +188,14 @@
       "metadata": {
         "id": "_3hyTeYJ2PFm",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "397d61cc-a23f-4e48-8e22-081668ac1fca"
+        "outputId": "ac2d924b-a816-4f9a-c8e7-7c008a588046"
       },
       "source": [
         "@dataclass  # a \"decorator\"; what's a decorator do?\n",
         "class Person:\n",
-        "    ''' Class for example person '''\n",
+        "    \"\"\"Class for example person\"\"\"\n",
         "    name: str\n",
         "    age: float\n",
         "\n",
@@ -205,7 +203,7 @@
         "list(filter(lambda person: person.age < 30, people))\n",
         "# why do I wrap filter in list()?"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,7 +215,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 3
         }
       ]
     },
@@ -329,7 +327,7 @@
       "source": [
         "## comprehensions\n",
         "\n",
-        "[tutorial](https://docs.python.org/3/tutorial/datastructures.html), [Python language reference](https://docs.python.org/3/reference/expressions.html#displays-for-lists-sets-and-dictionaries). Are you comfortable reading the grammar in the language reference?"
+        "See the [tutorial](https://docs.python.org/3/tutorial/datastructures.html) and [Python language reference](https://docs.python.org/3/reference/expressions.html#displays-for-lists-sets-and-dictionaries) documentation of comprehensions. Are you comfortable reading the grammar in the language reference?"
       ]
     },
     {
@@ -337,42 +335,33 @@
       "metadata": {
         "id": "47WKlm_a4UZi",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 87
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c9ed8e3d-c259-4ca5-b4dc-37082876d49d"
+        "outputId": "42f3aa1b-c72b-47f0-8af7-4b04525b7b3c"
       },
       "source": [
+        "# get the squares of whole numbers up to 5\n",
         "N_SQUARES = 6   # named constants are better than unnamed constants\n",
+        "\n",
+        "# use map() and lambda\n",
         "print(list(map(lambda x: x**2, range(N_SQUARES))))\n",
-        "# list comprehensions\n",
+        "\n",
+        "# use a list comprehensions\n",
         "print([x**2 for x in range(N_SQUARES)])\n",
-        "# list of tuples\n",
-        "print('(x, x**2):')\n",
-        "[(x, x**2) for x in range(N_SQUARES)]"
+        "\n",
+        "# make a list of tuples\n",
+        "print('(x, x**2):', [(x, x**2) for x in range(N_SQUARES)])"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[0, 1, 4, 9, 16, 25]\n",
             "[0, 1, 4, 9, 16, 25]\n",
-            "(x, x**2):\n"
+            "(x, x**2): [(0, 0), (1, 1), (2, 4), (3, 9), (4, 16), (5, 25)]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[(0, 0), (1, 1), (2, 4), (3, 9), (4, 16), (5, 25)]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 31
         }
       ]
     },
@@ -381,14 +370,15 @@
       "metadata": {
         "id": "0zTbVYkd5idT",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dd505af2-d432-4875-b893-8d9b40e3c23d"
+        "outputId": "37c7aa39-8f0e-48d8-ab21-8fb969173a37"
       },
       "source": [
         "# nested for comprehensions with if clause\n",
         "N_INTS = 3\n",
+        "\n",
+        "# all pairs (i, j) of whole numbers less than 3 in which i != j\n",
         "print([(i, j) for i in range(N_INTS) for j in range(N_INTS) if i != j])\n",
         "\n",
         "# outer variables are available in inner loops\n",
@@ -399,7 +389,7 @@
         "[x for x in range(N_INTS)]\n",
         "print(x)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,19 +454,19 @@
       "metadata": {
         "id": "11-oiGlp6oro",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "36e0cf24-4f65-4939-b47f-ebe99a2b2e10"
+        "outputId": "b278e763-e6e4-452a-c23b-442ed933edff"
       },
       "source": [
+        "# make a dictionary of x -> x**\n",
         "# a hard way\n",
-        "eg = dict(zip(range(N_SQUARES), [x**2 for x in range(N_SQUARES)]))\n",
-        "print(eg)\n",
-        "# a comprehension\n",
+        "print(dict(zip(range(N_SQUARES), [x**2 for x in range(N_SQUARES)])))\n",
+        "\n",
+        "# a compact comprehension\n",
         "{x: x**2 for x in range(N_SQUARES)}"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,7 +485,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 8
         }
       ]
     }
