--- a/examples/BMI2002_SP_21/week_4_examples/BMSE_Class_composition_and_inheritance.ipynb
+++ b/examples/BMI2002_SP_21/week_4_examples/BMSE_Class_composition_and_inheritance.ipynb
@@ -52,7 +52,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "359f7e6b-3a3b-43a4-91bd-dd98bd56f9d1"
+        "outputId": "8eb58f85-d3a8-4eed-a3e0-600b9855f247"
       },
       "source": [
         "# composition of sexes, subjects and samples\n",
@@ -62,30 +62,26 @@
         "    # see https://docs.python.org/3/library/enum.html#using-automatic-values\n",
         "    female = enum.auto()\n",
         "    male = enum.auto()\n",
-        "    transgender_male = enum.auto()\n",
-        "    transgender_female = enum.auto()\n",
-        "    non_binary = enum.auto()\n",
-        "    unknown = enum.auto()\n",
         "\n",
         "class Subject(object):\n",
         "    \"\"\"An individual human in a study\"\"\"\n",
-        "    def __init__(self, id, gender):\n",
+        "    def __init__(self, id, sex):\n",
         "        self.id = id\n",
-        "        self.gender = gender\n",
+        "        self.sex = sex\n",
         "\n",
         "    def __str__(self):\n",
-        "        # not the use of f-string; they're very handy\n",
-        "        return f\"id: {self.id}; gender: {self.gender.name}\"\n",
+        "        # note the use of f-string; they're very handy\n",
+        "        return f\"id: {self.id}; sex: {self.sex.name}\"\n",
         "\n",
         "subject_1 = Subject(23, Sex.female)\n",
         "print(subject_1)"
       ],
-      "execution_count": 12,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "id: 23; gender: female\n"
+            "id: 23; sex: female\n"
           ],
           "name": "stdout"
         }
@@ -97,7 +93,7 @@
         "id": "_v3u_ZPrQFR2"
       },
       "source": [
-        "*Now* we create `class Sample`, which reuses `Subject` via composition."
+        "Now we create `class Sample`, which reuses `Subject` via composition."
       ]
     },
     {
@@ -107,7 +103,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f47ebf25-bde6-42f7-cf71-0b7d72b1c6e4"
+        "outputId": "973fd189-608e-46e9-c187-0bc64e88d739"
       },
       "source": [
         "class Sample(object):\n",
@@ -136,14 +132,14 @@
         "print('sample.count():', sample.count())\n",
         "print('sample.get(78)', sample.get(78))"
       ],
-      "execution_count": 13,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "sample.count(): 0\n",
             "sample.count(): 2\n",
-            "sample.get(78) id: 78; gender: male\n"
+            "sample.get(78) id: 78; sex: male\n"
           ],
           "name": "stdout"
         }
@@ -158,7 +154,7 @@
         "## Inheritance, and its benefits\n",
         "Inheritance reuses existing class(es). It enables hierarchical refinement and extension.\n",
         "\n",
-        "The existing classes that are reused are the *base* or *superclass* classes, and the new class is the *derived* or *subclass* class. An instance of a dervied class can access the attributes (data and methods) of its base classes. It may also override them. The [`super()`](https://docs.python.org/3/library/functions.html#super) function accesses methods and attributes in the base classes.\n",
+        "The existing classes that are reused are the *base* or *superclass* classes, and the new class is the *derived* or *subclass* class. An instance of a derived class can access the attributes (data and methods) of its base classes. It may also override them. The [`super()`](https://docs.python.org/3/library/functions.html#super) function accesses methods and attributes in the base classes.\n",
         "\n",
         "All classes inherit from Python's built-in `object` class, the root of the class derivation DAG."
       ]
@@ -170,7 +166,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7516ba01-d6a6-4855-a6a3-ce0e6f952572"
+        "outputId": "119c974b-50ca-42b5-8719-4b33f760b8ef"
       },
       "source": [
         "class Error(Exception):\n",
@@ -194,24 +190,24 @@
         "\n",
         "TEST_MSG = 'short message'\n",
         "simulator_error = SimulatorError(TEST_MSG)\n",
-        "print(simulator_error)\n",
+        "print('simulator_error', simulator_error)\n",
         "\n",
         "print('\\nillustrate the class inheritance hierarchy')\n",
         "for cls in [object, Error, SimulatorError, float]:\n",
         "    print(\"SimulatorError is a subclass of {}: {}\".format(cls.__name__,\n",
-        "          issubclass(SimulatorError, cls)))\n",
+        "          issubclass(SimulatorError, (cls, ))))\n",
         "\n",
         "print('\\nillustrate the instance inheritance hierarchy')\n",
         "for cls in [object, Error, SimulatorError, float]:\n",
         "    print(\"simulator_error is an instance of {}: {}\".format(cls.__name__,\n",
         "          isinstance(simulator_error, cls)))"
       ],
-      "execution_count": 14,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "short message\n",
+            "simulator_error short message\n",
             "\n",
             "illustrate the class inheritance hierarchy\n",
             "SimulatorError is a subclass of object: True\n",
@@ -253,10 +249,9 @@
       "metadata": {
         "id": "gY9mqV79LJc4",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 198
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3b61a0d6-097d-4c86-a355-7383e27060f0"
+        "outputId": "295eeb7d-500a-4c96-ff6a-d2d1f68dff6e"
       },
       "source": [
         "from abc import ABC\n",
@@ -269,20 +264,16 @@
         "assert isinstance(MyClass(), MyABC)\n",
         "\n",
         "# an int is not a subclass of MyABC, of course\n",
-        "assert isinstance(3, MyABC)"
+        "print('isinstance(3, MyABC):', isinstance(3, MyABC))"
       ],
-      "execution_count": 15,
+      "execution_count": 38,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AssertionError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-8e92354a274b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# an int is not a subclass of MyABC, of course\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mMyABC\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAssertionError\u001b[0m: "
-          ]
+          "output_type": "stream",
+          "text": [
+            "isinstance(3, MyABC): False\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -304,7 +295,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4aeaf7af-227b-4036-b5ac-6bd56e0fc649"
+        "outputId": "e729373c-2305-4428-e152-c470f3e986e5"
       },
       "source": [
         "from abc import ABC, abstractmethod\n",
@@ -341,7 +332,7 @@
         "d.my_abstract_classmethod()\n",
         "d.my_abstract_staticmethod(38)"
       ],
-      "execution_count": 16,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +351,7 @@
         "id": "W8kAADdeF0fT"
       },
       "source": [
-        "Subclasses of an ABC must implement the ABC's methods."
+        "Instantiating a subclass of an ABC that fails to implement the ABC's methods raises a `TypeError`."
       ]
     },
     {
@@ -371,7 +362,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 198
         },
-        "outputId": "f0c6b6bb-e401-47ec-a2a4-c585f9f9da4b"
+        "outputId": "a2c01bcb-8f06-4739-e5b9-9b58bac816d9"
       },
       "source": [
         "class Bad(C):\n",
@@ -388,7 +379,7 @@
         "\n",
         "Bad(1)"
       ],
-      "execution_count": 17,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "error",
@@ -397,7 +388,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-17-a14e444e5731>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mBad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-40-a14e444e5731>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mBad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m: Can't instantiate abstract class Bad with abstract methods my_abstract_staticmethod"
           ]
         }
@@ -419,7 +410,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "316f91aa-57ef-4f8b-f8d1-e1b96121a925"
+        "outputId": "6039915d-fa8e-4402-ee53-eeb59ab3d93c"
       },
       "source": [
         "class OK(C):\n",
@@ -440,7 +431,7 @@
         "ok = OK(1)\n",
         "ok.my_abstract_method(2, 3)"
       ],
-      "execution_count": 18,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
