--- a/examples/BMI2002_SP_21/week_4_examples/BMSE_Object_oriented_classes_in_Python.ipynb
+++ b/examples/BMI2002_SP_21/week_4_examples/BMSE_Object_oriented_classes_in_Python.ipynb
@@ -72,12 +72,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "556f1490-aa94-42cc-df19-0b1163b06214"
+        "outputId": "966ac023-f5d1-4f90-fb00-8de3e6e3aa27"
       },
       "source": [
         "class Person1(object):\n",
         "    def __init__(self, first_name, last_name):\n",
         "        self.first_name = first_name\n",
+        "        setattr(self, 'first_name', first_name)\n",
         "        self.last_name = last_name\n",
         "\n",
         "    def whole_name(self):\n",
@@ -87,7 +88,7 @@
         "print(arthur_goldberg.last_name)\n",
         "arthur_goldberg.whole_name()"
       ],
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +110,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 2
         }
       ]
     },
@@ -142,10 +143,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c43fda31-25c9-467a-cb6a-4720a5a5d85f"
+        "outputId": "510a37a0-1217-449f-d300-4e7a4676ea60"
       },
       "source": [
         "dean = Person1('Dennis', 'Charney')\n",
+        "l = [dean]\n",
         "print(dean.whole_name())\n",
         "\n",
         "# what are Person1 and list?\n",
@@ -155,7 +157,7 @@
         "print('dean:', dean)\n",
         "id(dean)"
       ],
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +165,7 @@
             "Dennis Charney\n",
             "Person1: <class '__main__.Person1'>\n",
             "list: <class 'list'>\n",
-            "dean: <__main__.Person1 object at 0x7f31bff3bd30>\n"
+            "dean: <__main__.Person1 object at 0x7f62dfaf17f0>\n"
           ],
           "name": "stdout"
         },
@@ -171,13 +173,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "139851650546992"
+              "140062636316656"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 3
         }
       ]
     },
@@ -187,7 +189,7 @@
         "id": "NFH8UnJ7Lk32"
       },
       "source": [
-        "<font color='green'>Is an object's location in memory a good way to keep track of objects?</font>"
+        "<font color='green'>Are the memory locations of objects a good way to keep track of them?</font>"
       ]
     },
     {
@@ -214,7 +216,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c29dbe67-14fd-43b8-99b9-a364ff0bcd84"
+        "outputId": "24e0a0fb-e87f-4837-dd80-07fffe670cb7"
       },
       "source": [
         "class Person(object):\n",
@@ -263,6 +265,7 @@
         "\n",
         "me = Person('Arthur', 'Goldberg', 35)\n",
         "print(me)\n",
+        "\n",
         "def try_person(first, last, age):\n",
         "  try:\n",
         "    print('trying:', first, last, age)\n",
@@ -274,7 +277,7 @@
         "try_person('first', 'last', 200)\n",
         "try_person(6, 'last', 17)"
       ],
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -297,7 +300,7 @@
         "id": "-J2mKYjUq6_k"
       },
       "source": [
-        "In the cell above I've been careful to execute all lines of code in `Person`.\n",
+        "In the cell above I've been careful to execute all lines of code in `Person`, which foreshdows the concept of *coverage* in unit testing.\n",
         "\n"
       ]
     }
